New user registration

--- a/ChallengeBoard.Web/ChallengeBoard.Web.csproj
+++ b/ChallengeBoard.Web/ChallengeBoard.Web.csproj
@@ -190,6 +190,9 @@
     <Content Include="Content\Styles\Icons\_Variables.scss" />
     <Content Include="Content\Styles\Layout\Common.scss" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\NewUser.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
