--- a/ChallengeBoard.Web/ChallengeBoard.Web.csproj
+++ b/ChallengeBoard.Web/ChallengeBoard.Web.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\ViewModels\BoardViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Controllers\AuthenticationController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -192,6 +193,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\NewUser.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\Welcome.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Authentication\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
