--- a/ChallengeBoard.Web/ChallengeBoard.Web.csproj
+++ b/ChallengeBoard.Web/ChallengeBoard.Web.csproj
@@ -146,8 +146,6 @@
     <Content Include="Content\Icons\uE003-check.svg" />
     <Content Include="Content\Scripts\Modules\ChallengeCards.js" />
     <Content Include="Content\Scripts\Main.js" />
-    <Content Include="Content\Scripts\Vendor\masonry.pkgd.js" />
-    <Content Include="Content\Scripts\Vendor\progressbar.js" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -160,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\Scripts\Vendor\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -199,6 +198,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Authentication\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\PublishProfiles\Challenge board publish.pubxml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
