--- a/ChallengeBoard.Web/ChallengeBoard.Web.csproj
+++ b/ChallengeBoard.Web/ChallengeBoard.Web.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Models\ChallengeCategory.cs" />
     <Compile Include="Models\Extensions\ChallengeExtensions.cs" />
     <Compile Include="Models\Extensions\ListExtensions.cs" />
+    <Compile Include="Models\Feed.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\ViewModels\BoardViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
